k8s-specifications/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app
  labels:
    app: redis
spec:
  clusterIP: None ###

  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
