k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: votingapp.local
      http:
        paths:
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
